# Kraken-Engine

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  DurkGame.sln  KrakenEngine.sln  KrakenEngine.vcxproj  KrakenEngine.vcxproj.filters  LICENSE  Makefile  README.md  main.cpp  meson.build  meson.options  meson_options.txt  requirements.txt  setup.py
.github/workflows/: build.yml  codacy.yml  codeql.yml  gtest.yml  linux-gtest.yml  macos-gtest.yml
Debug/: DurkGame.idb  DurkGame.lib
DurkGame/: Character.hpp  Clock.hpp  Constants.hpp  DK_Character.h  DK_Clock.h  DK_Display.h  DK_Font.h  DK_Globals.h  DK_Input.h  DK_Math.h  DK_Rect.h  DK_Surface.h  DK_Texture.h  DurkGame.h  DurkGame.hpp  DurkGame.vcxproj  DurkGame.vcxproj.filters  Font.hpp  Globals.hpp  Input.hpp  Math.hpp  Rect.hpp  RenderWindow.hpp  Surface.hpp  Texture.hpp  character.cpp  clock.cpp  dk_character.cpp  dk_clock.cpp  dk_display.cpp  dk_font.cpp  dk_input.cpp  dk_math.cpp  dk_rect.cpp  dk_surface.cpp  dk_texture.cpp  durk_game.cpp  font.cpp  input.cpp  math.cpp  (+4 more)
DurkGame/Debug/: DurkGame.pch
DurkGame/x64/Debug/: DurkGame.pch
docs/: Doxyfile  conf.py  index.rst  installation.rst  intro.md  package-lock.json  package.json  requirements.txt
docs/_static/css/: custom.css
docs/_static/js/: custom.js
docs/_templates/: breadcrumbs.html
docs/contributing/: guidelines.rst  how_to_contribute.rst  testing.rst
docs/getting_started/: create_window.rst  index.rst  installation.rst
docs/html/: _clock_8hpp.html  _clock_8hpp.js  _clock_8hpp_source.html  _constants_8hpp.html  _constants_8hpp.js  _constants_8hpp_source.html  _font_8hpp.html  _font_8hpp.js  _font_8hpp_source.html  _globals_8hpp.html  _globals_8hpp.js  _globals_8hpp_source.html  _input_8hpp.html  _input_8hpp.js  _input_8hpp_source.html  _kraken_engine_8hpp.html  _kraken_engine_8hpp.js  _kraken_engine_8hpp_source.html  _math_8hpp.html  _math_8hpp.js  _math_8hpp_source.html  _rect_8hpp.html  _rect_8hpp.js  _rect_8hpp_source.html  _render_window_8hpp.html  _render_window_8hpp.js  _render_window_8hpp_source.html  _sprite_8hpp.html  _sprite_8hpp.js  _sprite_8hpp_source.html  _texture_8hpp.html  _texture_8hpp.js  _texture_8hpp_source.html  _texture_cache_8hpp.html  _texture_cache_8hpp.js  _texture_cache_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classkn_1_1_font-members.html  (+50 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  (+20 more)
docs/manual/: things_to_know.rst  tutorials.rst
docs/reference/: animated_texture.rst  animation_controller.rst  color.rst  constants.rst  controller.rst  draw.rst  ease.rst  font.rst  index.rst  input.rst  key.rst  mask.rst  math.rst  mouse.rst  music.rst  rect.rst  sound.rst  surface.rst  texture.rst  tile_map.rst  time.rst  transform.rst  window.rst
docs/showcase/: springjam25.rst
docs/source/: Doxyfile  conf.py  getting_started.rst  installation.rst
docs/source/getting_started/: index.rst
docs/source/reference/: cache.rst  constants.rst  draw.rst  globals.rst  index.rst  math.rst  mixer.rst  music.rst  overflow.rst  rect.rst  ref_main.rst  texture_cache.rst  tile_map.rst  time.rst
docs/source/xml/: Doxyfile.xml  _cache_8hpp.xml  _clock_8hpp.xml  _constants_8hpp.xml  _draw_8hpp.xml  _entity_8hpp.xml  _error_logger_8hpp.xml  _font_8hpp.xml  _globals_8hpp.xml  _input_8hpp.xml  _kraken_engine_8hpp.xml  _math_8hpp.xml  _math_overflow_8hpp.xml  (+42 more)
docs/tutorials/: index.rst
example/: Boat.hpp  Makefile  boat.cpp  main.cpp  meson.build
example/assets/: industrial.v2.tsx  room.tmx  room.tsx  tiles.aseprite
example/include/: Button.hpp  Player.hpp  Tracker.hpp  Wall.hpp
example/src/: button.cpp  main.cpp  player.cpp  tracker.cpp  wall.cpp
include/: AnimatedTexture.hpp  AnimationController.hpp  Cache.hpp  Camera.hpp  Character.hpp  CharacterSprite.hpp  Clock.hpp  Color.hpp  Config.hpp  Constants.hpp  Display.hpp  Draw.hpp  DurkGame.hpp  Ease.hpp  Entity.hpp  ErrorLogger.hpp  Font.hpp  GameController.hpp  Globals.hpp  Input.hpp  Key.hpp  KrakenEngine.hpp  Mask.hpp  Math.hpp  MathOverflow.hpp  Mixer.hpp  Mouse.hpp  Music.hpp  Overflow.hpp  Rect.hpp  RenderWindow.hpp  Sound.hpp  Sprite.hpp  SpriteCharacter.hpp  SpriteNode.hpp  SpriteStatic.hpp  Surface.hpp  Texture.hpp  TextureCache.hpp  Tile.hpp  (+7 more)
include/SDL2/: SDL_filesystem.h  SDL_image.h  SDL_main.h  SDL_mouse.h  SDL_rwops.h
include/fonts/: minecraftia.h  titillium.h
include/gfx/: SDL2_framerate.h  SDL2_gfxPrimitives.h  SDL2_gfxPrimitives_font.h  SDL2_imageFilter.h  SDL2_rotozoom.h
include/icon/: kraken_icon.h
include/pugixml/: pugiconfig.hpp  pugixml.hpp
scripts/: install_sdl.py
src/: AnimatedTexture.cpp  MathOverflow.cpp  _globals.cpp  animation_controller.cpp  cache.cpp  camera.cpp  character.cpp  character_sprite.cpp  clock.cpp  color.cpp  display.cpp  draw.cpp  durk_game.cpp  ease.cpp  entity.cpp  font.cpp  game_controller.cpp  input.cpp  key.cpp  library.cpp  mask.cpp  math.cpp  meson.build  mixer.cpp  mouse.cpp  music.cpp  overflow.cpp  rect.cpp  render_window.cpp  sound.cpp  sprite.cpp  sprite_character.cpp  sprite_node.cpp  sprite_static.cpp  src_script.py  surface.cpp  texture.cpp  texture_cache.cpp  tile_map.cpp  time.cpp  (+2 more)
src/gfx/: SDL2_framerate.c  SDL2_gfxPrimitives.c  SDL2_imageFilter.c  SDL2_rotozoom.c  meson.build
src/pugixml/: pugixml.cpp
subprojects/: libpng.wrap  zlib.wrap
test/: main.cpp  test_Math.cpp  test_MathOverflow.cpp  test_Overflow.cpp  test_RenderWindow.cpp  test_Window.cpp
tests/: TestBase.hpp  meson.build  test_Math.cpp  test_Overflow.cpp  test_Window.cpp
x64/Debug/: DurkGame.idb  DurkGame.lib
