sources = [
    'src/draw.cpp',
    'src/font.cpp',
    'src/input.cpp',
    'src/math.cpp',
    'src/music.cpp',
    'src/overflow.cpp',
    'src/rect.cpp',
    'src/sound.cpp',
    'src/texture.cpp',
    'src/tile_map.cpp',
    'src/time.cpp',
    'src/window.cpp',
    'src/AnimatedTexture.cpp'
]

sources += 'src/pugixml/pugixml.cpp'