sources = [
    'src/animation_controller.cpp',
    'src/draw.cpp',
    'src/font.cpp',
    'src/game_controller.cpp',
    'src/input.cpp',
    'src/key.cpp',
    'src/math.cpp',
    'src/mouse.cpp',
    'src/music.cpp',
    'src/overflow.cpp',
    'src/rect.cpp',
    'src/sound.cpp',
    'src/texture.cpp',
    'src/tile_map.cpp',
    'src/time.cpp',
    'src/window.cpp',
]
